--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
 
 body {
     height: 100%;
+    width: 100%;
     background: hsl(234, 29%, 20%);
     font-size: 1rem;
     font-family: 'Roboto', sans-serif;
@@ -25,7 +26,7 @@ body {
 }
 
 .container {
-    height: 100dvh;
+    min-height: 100dvh;
     display: grid;
 }
 
